<resources>
    <string name="app_name">ChecklistApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="item_name">Item Name</string>
    <string name="add_new_checklist_item">Add New Checklist Item</string>
    <string name="cancel">Cancel</string>
    <string name="detail_checklist_item">Detail Checklist Item</string>
    <string name="set_completed">Set Completed</string>
    <string name="set_uncompleted">Set Uncompleted</string>
    <string name="update_checklist_item">Update Checklist Item</string>
    <string name="update">Update</string>
    <string name="add_new_checklist">Add New Checklist</string>
</resources>